# hkl

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  NEWS  README  README.md  SConstruct  TODO  autogen.sh  config-linux2.py  config-win32.py  configure.ac  fbuildroot.py  hkl.h  hkl.pc.in  hkl3d.pc.in  org-doc.make  readme.txt  release_notes.txt  sphinx.make  waf  wscript
Documentation/: Makefile.am  SConscript  default.el  ghkl.1  hkl-default.el  hkl.lyx  hkl.org.in  hkl.texi  user-guide.txt
Documentation/Maxima/: E4C_bissector.max  E4C_constant_chi_phi.max
Documentation/api/: Makefile.am  hkl-docs.sgml  hkl-sections.txt
Documentation/figures/: 3S+1D.asy  3S+1D.pov  4S+2D.asy  4S+2D_pov.pov  4S+2D_reciprocal.asy  4S+2D_reciprocal2.asy  4S+2D_reciprocal3.asy  4S+2D_reciprocal4.asy  4S+2D_reciproque.pov  4S+2D_reciproque2.pov  4S+2D_reciproque3.pov  4S+2D_reciproque4.pov  B_a.asy  B_a.pov  B_a.py  B_b.asy  B_b.pov  B_b.py  B_b3_y.asy  B_b3_y.pov  Makefile.am  arrows.FCMacro  arrows.inc  arrows.py  bravais.inc  bravais.py  cristal.ini  cristal.pov  crystal.FCMacro  crystal.asy  crystal.py  diffractometer.asy  diffractometers.py  e2k_1.asy  e2k_2.asy  e2k_3.asy  e2k_4.asy  eulerians.asy  k4cv.asy  k6c.asy  (+4 more)
Documentation/gtk-doc/: Makefile.am
Documentation/sphinx/: Makefile.am
Documentation/uml/: next_hkl.dia
ccan/: Makefile.am
ccan/darray/: darray.h
contrib/haskell/: ghkl.hs  hkl.cabal
contrib/sixs/: Makefile.am  hkl3d.c
gui/: 3d.ui  Makefile.am  axespinbutton.cpp  axespinbutton.h  g3d.vapi  ghkl-callbacks.c  ghkl-callbacks.cpp  ghkl-callbacks.h  ghkl.c  ghkl.cpp  ghkl.desktop  ghkl.h  ghkl.ui  ghkl.vala  hkl-gui-3d-gl.c  hkl-gui-3d-gl.h  hkl-gui-3d.c  hkl-gui-3d.cpp  hkl-gui-3d.h  hkl-gui-3d.vala  hkl-gui-callbacks.cpp  hkl-gui-macros.h  hkl-gui-modelcolumns.h  hkl-gui-pseudoaxes.c  hkl-gui-pseudoaxes.cpp  hkl-gui-pseudoaxes.h  hkl-gui-pseudoaxes.vala  hkl-gui.c  hkl-gui.cpp  hkl-gui.h  hkl-gui.vala  hkl.ui  hkl.vapi  hkl3d-gui-model.vala  hkl3d-gui-scene.vala  hkl3d-gui-view.vala  hkl3d.vapi  hklwindow.cpp  hklwindow.h  main.c  (+10 more)
gui/DiffabsDemo/: DiffabsDemo.cpp  DiffabsDemo.h  Makefile.am  main.cpp
gui/OpenGL/: DemoApplication.cpp  GL_ShapeDrawer.cpp  GL_Simplex1to4.cpp  GlutDemoApplication.cpp  GlutStuff.cpp  Makefile.am
gui/ghkl3d/: Makefile.am  cristal4C.yaml  diffabs.yaml  hkl3d-gui-application.cpp  hkl3d-gui-application.h  hkl3d-gui-gl.c  hkl3d-gui-model.cpp  (+7 more)
hkl/: Hkl-5.0.gir  Makefile.am  hkl-axis-private.h  hkl-axis.c  hkl-axis.h  hkl-binding-private.h  hkl-binding.c  hkl-detector-factory.c  hkl-detector-factory.h  hkl-detector-private.h  hkl-detector.c  hkl-detector.h  hkl-engine-2c.c  hkl-engine-e4c.c  hkl-engine-e6c.c  hkl-engine-k4c.c  hkl-engine-k6c.c  hkl-engine-petra3-p09-eh2.c  hkl-engine-petra3.c  hkl-engine-soleil-sirius-turret.c  hkl-engine-soleil-sixs-med.c  hkl-engine-template.c  hkl-engine-zaxis.c  hkl-error-private.h  hkl-error.c  hkl-error.h  hkl-factory-private.h  hkl-factory.c  hkl-factory.h  hkl-geometry-factory.c  hkl-geometry-factory.h  hkl-geometry-private.h  hkl-geometry.c  hkl-geometry.h  hkl-interval-private.h  hkl-interval.c  hkl-interval.h  hkl-lattice-private.h  hkl-lattice.c  hkl-lattice.h  (+85 more)
hkl3d/: Makefile.am  hkl3d.cpp  hkl3d.h
include/: HKLException.h  Makefile.am  SConscript  affinement.h  angleconfiguration.h  angleconfiguration_eulerian4C.h  angleconfiguration_eulerian6C.h  angleconfiguration_kappa4C.h  axe.h  config.h  constants.h  cristal.h  crystal.h  crystallist.h  diffractometer.h  diffractometer_eulerian4C.h  diffractometer_eulerian6C.h  diffractometer_kappa4C.h  fitparameter.h  fitparameterlist.h  geometry.h  geometry_eulerian4C.h  geometry_eulerian6C.h  geometry_kappa4C.h  hkl.h  lattice.h  mode.h  mode_eulerian4C.h  mode_eulerian6C.h  mode_kappa4C.h  mymap.h  myvector.h  object.h  objectwithparameters.h  pseudoaxe.h  pseudoaxe_eulerian4C.h  quaternion.h  range.h  reflection.h  source.h  (+3 more)
src/: CMakeLists.txt  HKLException.cpp  HKLException.h  LibUser.cpp  Makefile  Makefile.am  Makefile.linux  Makefile.vc  README-compil.txt  SConscript  affinement.cpp  affinement_simplex.cpp  affinementlist.cpp  angleconfig.h  angleconfiguration.cpp  angleconfiguration_eulerian4C.cpp  angleconfiguration_eulerian6C.cpp  angleconfiguration_kappa4C.cpp  axe.cpp  axe_rotation.cpp  axefactory.cpp  axes.c  axis.c  constant.cpp  constants.cpp  constants.h  convenience.cpp  cristal.cpp  cristal.h  crystal.cpp  crystallist.cpp  diffractometer.c  diffractometer.cpp  diffractometer.h  diffractometer_eulerian4C.cpp  diffractometer_eulerian6C.cpp  diffractometer_kappa.cpp  diffractometer_kappa4C.cpp  diffractometer_kappa6C.cpp  diffractometer_twoC.cpp  (+163 more)
test/: CMakeLists.txt  Makefile.am  SConscript  TESTS  affinement_simplex_test.cpp  affinement_simplex_test.h  angleconfiguration_test.cpp  angleconfiguration_test.h  axe_rotation_test.cpp  axe_rotation_test.h  axe_test.cpp  axe_test.h  axis_test.c  axis_test.cpp  axis_test.h  bench.c  cristal_test.cpp  cristal_test.h  crystal_test.cpp  crystal_test.h  crystallist_test.cpp  crystallist_test.h  diffractometer_eulerian4C_test.cpp  diffractometer_eulerian4C_test.h  diffractometer_kappa4C_test.cpp  diffractometer_kappa4C_test.h  diffractometer_kappa6C_test.cpp  diffractometer_kappa6C_test.h  diffractometer_test.cpp  diffractometer_test.h  diffractometer_twoC_test.cpp  diffractometer_twoC_test.h  fitparameter_test.cpp  fitparameter_test.h  geometry_eulerian4C_test.cpp  geometry_eulerian4C_test.h  geometry_eulerian6C_test.cpp  geometry_eulerian6C_test.h  geometry_kappa4C_test.cpp  geometry_kappa4C_test.h  (+107 more)
tests/: Makefile.am  hkl-axis-t.c  hkl-bench-t.c  hkl-detector-t.c  hkl-error-t.c  hkl-geometry-t.c  hkl-interval-t.c  hkl-lattice-t.c  hkl-matrix-t.c  hkl-parameter-t.c  hkl-pseudoaxis-e4ch-t.c  hkl-pseudoaxis-e4cv-t.c  hkl-pseudoaxis-e6c-t.c  hkl-pseudoaxis-k4cv-t.c  hkl-pseudoaxis-k6c-t.c  hkl-pseudoaxis-soleil-sixs-med-t.c  hkl-pseudoaxis-t.c  hkl-pseudoaxis-zaxis-t.c  hkl-quaternion-t.c  hkl-sample-t.c  hkl-source-t.c  hkl-unit-t.c  hkl-vector-t.c  hkl3d-test-t.c  runtests.c
(+622 files in other folders)
