## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4
DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --enable-introspection

SUBDIRS = hkl
if HKL3D
SUBDIRS += hkl3d data
endif
if GUI
SUBDIRS += gui
endif
SUBDIRS += test Documentation

EXTRA_DIST = hkl.pc.in hkl3d.pc.in

include_HEADERS = hkl.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = hkl.pc hkl3d.pc

## lcov part
.PHONY: lcov genlcov lcov-clean
# use recursive makes in order to ignore errors during check
lcov:
	-$(MAKE) $(AM_MAKEFLAGS) -k check
	$(MAKE) $(AM_MAKEFLAGS) genlcov

# we have to massage the lcov.info file slightly to hide the effect of libtool
# placing the objects files in the .libs/ directory separate from the *.c
# we also have to delete tests/.libs/*.gcda
genlcov:
	rm -f $(top_builddir)/test/hkl/.libs/*.gcda
	$(LTP) --directory $(top_builddir) --capture --output-file hkl-lcov.info --test-name hkl-lcov --no-checksum --compat-libtool
	LANG=C $(LTP_GENHTML) --prefix $(top_builddir) --output-directory hkl-lcov --title "hkl Code Coverage" --legend --show-details hkl-lcov.info

lcov-clean:
	-$(LTP) --directory $(top_builddir) -z
	-rm -rf hkl-lcov.info hkl-lcov
	-find -name '*.gcda' -print | xargs rm
	-find -name '*.gcno' -print | xargs rm

distclean-local: lcov-clean

## Generate the Changelog file for the distribution.
dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
                ( cd "$(top_srcdir)" && \
                  echo '# Generated by Makefile. Do not edit.'; echo; \
                  $(top_srcdir)/config/missing --run git log --stat ) > ChangeLog.tmp \
                && mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
                || ( rm -f ChangeLog.tmp ; \
                     echo Failed to generate ChangeLog >&2 ); \
        else \
                echo A git clone is required to generate a ChangeLog >&2; \
        fi