noinst_LTLIBRARIES = libccan.la
libccan_la_SOURCES = \
	ccan/list/list.h \
	ccan/list/list.c \
	ccan/noerr/noerr.c \
	ccan/noerr/noerr.h \
	ccan/ptr_valid/ptr_valid.c \
	ccan/ptr_valid/ptr_valid.h \
	ccan/check_type/check_type.h \
	ccan/compiler/compiler.h \
	ccan/autodata/autodata.c \
	ccan/autodata/autodata.h \
	ccan/container_of/container_of.h \
	ccan/array_size/array_size.h \
	ccan/darray/darray.h \
	ccan/build_assert/build_assert.h
